--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="./resources/assets/styles/main.css" />
-    <link rel="stylesheet" href="./resources/assets/styles/slick.css" />
 
     <!--Font Awesome-->
     <link
@@ -48,5 +47,302 @@
 
     <title>Vestidos de Noivas</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="container">
+        <div class="logo-nav">
+          <img
+            src="./resources/assets/img/logo-julia-golldenzon.webp"
+            alt="Logo Julia Golldenzon"
+            width="70"
+            height="70"
+          />
+        </div>
+        <ul>
+          <li>
+            <a href="">Redes Sociais</a>
+          </li>
+          <li>
+            <a href="">Redes Sociais</a>
+          </li>
+          <li>
+            <a href="">Redes Sociais</a>
+          </li>
+          <li>
+            <a href="">Redes Sociais</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="s-banner">
+        <div class="banner-principal">
+          <a href="#">
+            <picture>
+              <source
+                srcset="
+                  resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg
+                "
+                media="(max-width: 415px)"
+              />
+              <source
+                srcset="
+                  resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg
+                "
+                media="(min-width: 821px)"
+              />
+              <img
+                src="resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg"
+                alt="Graduação, Licenciatura e Pós-Graduação 100% EAD. Maior faculdade EAD de São Paulo. Cursos a partir de R$ 59,00 por mês."
+                style="width: 100%"
+                title="Graduação, Licenciatura e Pós-Graduação 100% EAD"
+              />
+            </picture>
+          </a>
+        </div>
+      </section>
+
+      <section class="s-release">
+        <div class="container">
+          <div class="release-infos">
+            <h2>O casamento dos seus sonhos começa aqui!</h2>
+            <div class="text-release">
+              <div class="p-text-release">
+                <p>
+                  Se você está planejando o casamento dos seus sonhos, veio ao
+                  lugar certo! O atelie Julia Golldenzon é o seu guia para
+                  tornar o seu grande dia inesquecível. Nós oferecemos o vestido
+                  que você precisa para celebrar o casamento dos seus sonhos.
+                </p>
+                <p>
+                  <strong>Trabalhamos com:</strong>
+                  <ul>
+                    <li>Tipo de vestido 1</li>
+                    <li>Tipo de vestido 2</li>
+                    <li>Tipo de vestido 3</li>
+                    <li>Tipo de vestido 4</li>
+                    <li>Tipo de vestido 5</li>
+                  </ul>
+                </p>
+
+              </div>
+              <div class="img-text-release">
+                <img
+                  src="./resources/assets/img/vestido-branco.jpg"
+                  alt="Mulher Loira alisando um vestido de noiva Branco"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-history">
+        <div class="container">
+          <div class="info-history">
+            <h2>
+              Nossa História
+            </h2>
+            <div class="history-content">
+              <div class="history-item">
+                <img src="./resources/assets/img/vestido-branco.jpg" alt="João Silva">
+                <p>Nossa história começou há mais de 50 anos, quando o fundador da nossa empresa, João Silva, abriu uma pequena loja de ferramentas no centro da cidade. Com muito trabalho duro e dedicação, João conseguiu expandir seu negócio e se tornou um dos principais fornecedores de ferramentas e equipamentos para a indústria local.</p>
+              </div>
+              <div class="history-item reverse">
+                <img src="./resources/assets/img/vestido-branco.jpg" alt="Pedro Silva">
+                <p>Na década de 1980, sob o comando do filho de João, Pedro Silva, a empresa passou a se especializar em tecnologia de ponta, com foco em automação industrial. Com investimentos em pesquisa e desenvolvimento, a empresa logo se tornou líder de mercado em soluções de automação para indústrias de diversos setores.</p>
+              </div>
+              <div class="history-item">
+                <img src="./resources/assets/img/vestido-branco.jpg" alt="Expansão Internacional">
+                <p>No início dos anos 2000, a empresa se expandiu internacionalmente, abrindo filiais em vários países ao redor do mundo e fornecendo soluções de automação para empresas de grande porte em todo o planeta.</p>
+              </div>
+              <div class="history-item reverse">
+                <img src="./resources/assets/img/vestido-branco.jpg" alt="Terceira Geração">
+                <p>Hoje, a empresa é liderada pela terceira geração da família Silva e continua comprometida em fornecer soluções de automação de alta qualidade para empresas de todos os setores, além de investir em pesquisa e desenvolvimento para manter-se na vanguarda da tecnologia industrial.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-galery">
+        <div class="container">
+          <div class="galery-info">
+            <h2>Conheça nossa galeria!</h2>
+            <div class="galery-content">
+              <div class="galery-itens">
+                <a href="">
+                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                  <p>Tipo de vestido 1</p>
+                </a>
+
+              </div>
+              <div class="galery-itens">
+                <a href="">
+                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                  <p>Tipo de vestido 2</p>
+                </a>
+              </div>
+              <div class="galery-itens">
+                <a href="">
+                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                  <p>Tipo de vestido 3</p>
+                </a>
+              </div>
+            </div>
+            <div class="galery-content">
+              <div class="galery-itens">
+                <a href="">
+                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                  <p>Tipo de vestido 4</p>
+                </a>
+              </div>
+              <div class="galery-itens">
+                <a href="">
+                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                  <p>Tipo de vestido 5</p>
+                </a>
+              </div>
+              <div class="galery-itens">
+                <a href="">
+                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                  <p>Tipo de vestido 6</p>
+                </a>
+              </div>
+            </div>
+            <a href="#">Ver todas fotos ...</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-depoimentos">
+        <div class="container">
+          <div class="depoimentos-info">
+            <h2>Depoimentos</h2>
+            <div class="depoimentos-content">
+              <div class="depoimentos-itens">
+                <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                <h3>Nome da pessoa</h3>
+                <p>Texto</p>
+                <p>Rating (avaliação com estrelas)</p>
+              </div>
+              <div class="depoimentos-itens">
+                <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                <h3>Nome da pessoa</h3>
+                <p>Texto</p>
+                <p>Rating (avaliação com estrelas)</p>
+              </div>
+              <div class="depoimentos-itens">
+                <img src="./resources/assets/img/vestido-branco.jpg" alt="">
+                <h3>Nome da pessoa</h3>
+                <p>Texto</p>
+                <p>Rating (avaliação com estrelas)</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-faq">
+        <div class="container">
+          <div class="faq-info">
+            <h2>Perguntas frequentes</h2>
+            <div class="faq-content">
+              <div class="faq-itens">
+                <div class="faq-item">
+                  <button class="btn-collapse">
+                    1. Pergunta
+                  </button>
+                  <div class="content-collapse">
+                    <p>
+                      Resposta: 
+                    </p>
+                  </div>
+                </div>
+                <div class="faq-item">
+                  <button class="btn-collapse">
+                    1. Pergunta
+                  </button>
+                  <div class="content-collapse">
+                    <p>
+                      Resposta:
+                    </p>
+                  </div>
+                </div>
+                <div class="faq-item">
+                  <button class="btn-collapse">
+                    1. Pergunta
+                  </button>
+                  <div class="content-collapse">
+                    <p>
+                      Resposta:
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-form">
+        <div class="container">
+          <div class="form-info">
+            <div class="form-content">
+              <form action="caminho.php" method="POST">
+                <label for="nome">Nome:</label> <br />
+                <input type="text" id="nome" name="nome" required /> <br />
+                <label for="email">E-mail:</label> <br />
+                <input type="email" id="email" name="email" required /><br />
+                <label for="mensagem">Mensagem:</label><br />
+                <textarea
+                  id="mensagem"
+                  name="mensagem"
+                  rows="5"
+                  cols="30"
+                  required
+                ></textarea>
+                <br />
+                <input type="submit" value="Enviar" />
+              </form>
+              <h3 class="or">Ou</h3>
+              <a href="">
+                <div class="whatsForm">
+                  <p>Entre em contato</p>
+                  <i class="fa fa-whatsapp whatsapp-icon"></i>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-whatsAppButton">
+        <a href="https://wa.me/Numero do Telefone" target="_blank" class="whatsapp-link">
+          <i class="fa fa-whatsapp whatsapp-icon"></i>
+        </a>
+      </section>
+    </main>
+
+    <script>
+      // Selecione todos os elementos de pergunta do FAQ
+      const faqQuestions = document.querySelectorAll('.faq-question');
+
+      // Adicione um ouvinte de evento de clique a cada pergunta
+      faqQuestions.forEach(question => {
+        question.addEventListener('click', () => {
+          // Selecione o elemento de resposta correspondente
+          const answer = question.parentNode.querySelector('.faq-answer');
+          // Alternar a classe "active" no elemento de pergunta atual
+          question.parentNode.classList.toggle('active');
+          // Atualizar a posição da seta
+          const arrow = question.querySelector('::before');
+          arrow.style.right = question.parentNode.classList.contains('active') ? '5px' : '15px'; // Mova a seta para a esquerda quando a resposta estiver aberta
+        });
+      });
+    </script>
+    
+    <script src="./resources/assets/js/main.js"></script>
+  </body>
 </html>
