LP base 50% feito

--- a/index.html
+++ b/index.html
@@ -78,28 +78,26 @@
     <main>
       <section class="s-banner">
         <div class="banner-principal">
-          <a href="#">
-            <picture>
-              <source
-                srcset="
-                  resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg
-                "
-                media="(max-width: 415px)"
-              />
-              <source
-                srcset="
-                  resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg
-                "
-                media="(min-width: 821px)"
-              />
-              <img
-                src="resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg"
-                alt="Graduação, Licenciatura e Pós-Graduação 100% EAD. Maior faculdade EAD de São Paulo. Cursos a partir de R$ 59,00 por mês."
-                style="width: 100%"
-                title="Graduação, Licenciatura e Pós-Graduação 100% EAD"
-              />
-            </picture>
-          </a>
+          <picture>
+            <source
+              srcset="
+                resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg
+              "
+              media="(max-width: 415px)"
+            />
+            <source
+              srcset="
+                resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg
+              "
+              media="(min-width: 821px)"
+            />
+            <img
+              src="resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg"
+              alt="Graduação, Licenciatura e Pós-Graduação 100% EAD. Maior faculdade EAD de São Paulo. Cursos a partir de R$ 59,00 por mês."
+              style="width: 100%"
+              title="Graduação, Licenciatura e Pós-Graduação 100% EAD"
+            />
+          </picture>
         </div>
       </section>
 
@@ -225,19 +223,37 @@
                 <img src="./resources/assets/img/vestido-branco.jpg" alt="">
                 <h3>Nome da pessoa</h3>
                 <p>Texto</p>
-                <p>Rating (avaliação com estrelas)</p>
+                <div class="rating-depoimentos">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
               </div>
               <div class="depoimentos-itens">
                 <img src="./resources/assets/img/vestido-branco.jpg" alt="">
                 <h3>Nome da pessoa</h3>
                 <p>Texto</p>
-                <p>Rating (avaliação com estrelas)</p>
+                <div class="rating-depoimentos">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
               </div>
               <div class="depoimentos-itens">
                 <img src="./resources/assets/img/vestido-branco.jpg" alt="">
                 <h3>Nome da pessoa</h3>
                 <p>Texto</p>
-                <p>Rating (avaliação com estrelas)</p>
+                <div class="rating-depoimentos">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
               </div>
             </div>
           </div>
@@ -288,13 +304,36 @@
 
       <section class="s-form">
         <div class="container">
+          <h2>Entre em contato</h2>
           <div class="form-info">
+            <div class="endereco-loja">
+              <div class="adress-itens">
+                <img src="./resources/assets/img/logo-julia-golldenzon.webp" alt="" width="150" height="150">
+                <strong>Endereço:</strong>
+                <p><i class="fa-solid fa-location-dot"></i>R. Jerônimo Monteiro, 73 - 101 - Leblon, Rio de Janeiro - RJ</p>
+              </div>
+              <div class="adress-itens">
+                <strong>Atendimento:</strong>
+                <div>
+                  <a href=""><i class="fa-regular fa-envelope"></i> loja@ateliejuliagolldenzon.com</a> <br>
+                  <a href="tel:(21) 3489-9733"><i class="fa-solid fa-phone"></i>Telefone: (21) 3489-9733</a> <br>
+                  <a href="https://api.whatsapp.com/send?phone=5521971211140"><i class="fa-brands fa-whatsapp"></i>Whatsapp:(21) 9 7121-1140</a>
+                </div>
+              </div>
+              <div class="adress-itens">
+                <strong>Redes Sociais:</strong>
+                <div>
+                  <a href="https://www.facebook.com/ateliejuliagolldenzon/"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="https://www.instagram.com/juliagolldenzon/"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+              </div>
+            </div>
             <div class="form-content">
               <form action="caminho.php" method="POST">
                 <label for="nome">Nome:</label> <br />
-                <input type="text" id="nome" name="nome" required /> <br />
+                <input type="text" id="nome" name="nome" placeholder="Seu nome" required /> <br />
                 <label for="email">E-mail:</label> <br />
-                <input type="email" id="email" name="email" required /><br />
+                <input type="email" id="email" name="email" placeholder="Insira seu e-mail" required /><br />
                 <label for="mensagem">Mensagem:</label><br />
                 <textarea
                   id="mensagem"
@@ -302,6 +341,7 @@
                   rows="5"
                   cols="30"
                   required
+                  placeholder="Digite sua mensagem"
                 ></textarea>
                 <br />
                 <input type="submit" value="Enviar" />
