ajuste base e layout da LP

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="./resources/assets/styles/main.css" />
+    <link rel="stylesheet" href="./resources/assets/styles/carrousel.css" />
 
     <!--Font Awesome-->
     <link
@@ -45,344 +46,156 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
 
-    <title>Vestidos de Noivas</title>
+    <!--Carrousel-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
+
+    <title>LandingPage Julia Golldenzon</title>
   </head>
   <body>
     <header>
-      <nav class="container">
-        <div class="logo-nav">
-          <img
-            src="./resources/assets/img/logo-julia-golldenzon.webp"
-            alt="Logo Julia Golldenzon"
-            width="70"
-            height="70"
-          />
+      <nav>
+        <div class="social-nav">
+          <div class="container">
+            <div class="social-nav-itens">
+              <p>Nos siga nas redes sociais:</p>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="links-nav-itens">
+              <div class="logo-nav-link">
+                <img src="" alt="" />
+              </div>
+              <ul>
+                <li>
+                  <a href="">Sobre</a>
+                </li>
+                <li>
+                  <a href="">Galeria</a>
+                </li>
+                <li>
+                  <a href="">Serviços</a>
+                </li>
+                <li>
+                  <a href="">Depoimentos</a>
+                </li>
+                <li>
+                  <a href="">Contato</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <ul>
-          <li>
-            <a href="">Redes Sociais</a>
-          </li>
-          <li>
-            <a href="">Redes Sociais</a>
-          </li>
-          <li>
-            <a href="">Redes Sociais</a>
-          </li>
-          <li>
-            <a href="">Redes Sociais</a>
-          </li>
-        </ul>
       </nav>
     </header>
 
-    <main>
-      <section class="s-banner">
-        <div class="banner-principal">
-          <picture>
-            <source
-              srcset="
-                resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg
-              "
-              media="(max-width: 415px)"
-            />
-            <source
-              srcset="
-                resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg
-              "
-              media="(min-width: 821px)"
-            />
+    <section class="s-banner-home">
+      <div class="container">
+        <div class="content-banner-home">
+          <div class="img-banner-home">
+            <img src="./resources/assets/img/casamento-atelie.jpg" alt="" />
+          </div>
+          <div class="text-banner-home">
             <img
-              src="resources/assets/img/a-noiva-com-um-vestido-de-casamento.jpg"
-              alt="Graduação, Licenciatura e Pós-Graduação 100% EAD. Maior faculdade EAD de São Paulo. Cursos a partir de R$ 59,00 por mês."
-              style="width: 100%"
-              title="Graduação, Licenciatura e Pós-Graduação 100% EAD"
+              src="./resources/assets/img/alianca-removebg-preview.png"
+              alt=""
             />
-          </picture>
-        </div>
-      </section>
-
-      <section class="s-release">
-        <div class="container">
-          <div class="release-infos">
-            <h2>O casamento dos seus sonhos começa aqui!</h2>
-            <div class="text-release">
-              <div class="p-text-release">
-                <p>
-                  Se você está planejando o casamento dos seus sonhos, veio ao
-                  lugar certo! O atelie Julia Golldenzon é o seu guia para
-                  tornar o seu grande dia inesquecível. Nós oferecemos o vestido
-                  que você precisa para celebrar o casamento dos seus sonhos.
-                </p>
-                <p>
-                  <strong>Trabalhamos com:</strong>
-                  <ul>
-                    <li>Tipo de vestido 1</li>
-                    <li>Tipo de vestido 2</li>
-                    <li>Tipo de vestido 3</li>
-                    <li>Tipo de vestido 4</li>
-                    <li>Tipo de vestido 5</li>
-                  </ul>
-                </p>
-
-              </div>
-              <div class="img-text-release">
-                <img
-                  src="./resources/assets/img/vestido-branco.jpg"
-                  alt="Mulher Loira alisando um vestido de noiva Branco"
-                />
-              </div>
+            <h1>O vestido perfeito para seu casamento!</h1>
+            <p>Atelie Julia Gonndenzon</p>
+            <div class="link-banner-home">
+              <a href="">Reservar visita</a>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="s-history">
-        <div class="container">
-          <div class="info-history">
-            <h2>
-              Nossa História
-            </h2>
-            <div class="history-content">
-              <div class="history-item">
-                <img src="./resources/assets/img/vestido-branco.jpg" alt="João Silva">
-                <p>Nossa história começou há mais de 50 anos, quando o fundador da nossa empresa, João Silva, abriu uma pequena loja de ferramentas no centro da cidade. Com muito trabalho duro e dedicação, João conseguiu expandir seu negócio e se tornou um dos principais fornecedores de ferramentas e equipamentos para a indústria local.</p>
-              </div>
-              <div class="history-item reverse">
-                <img src="./resources/assets/img/vestido-branco.jpg" alt="Pedro Silva">
-                <p>Na década de 1980, sob o comando do filho de João, Pedro Silva, a empresa passou a se especializar em tecnologia de ponta, com foco em automação industrial. Com investimentos em pesquisa e desenvolvimento, a empresa logo se tornou líder de mercado em soluções de automação para indústrias de diversos setores.</p>
-              </div>
-              <div class="history-item">
-                <img src="./resources/assets/img/vestido-branco.jpg" alt="Expansão Internacional">
-                <p>No início dos anos 2000, a empresa se expandiu internacionalmente, abrindo filiais em vários países ao redor do mundo e fornecendo soluções de automação para empresas de grande porte em todo o planeta.</p>
-              </div>
-              <div class="history-item reverse">
-                <img src="./resources/assets/img/vestido-branco.jpg" alt="Terceira Geração">
-                <p>Hoje, a empresa é liderada pela terceira geração da família Silva e continua comprometida em fornecer soluções de automação de alta qualidade para empresas de todos os setores, além de investir em pesquisa e desenvolvimento para manter-se na vanguarda da tecnologia industrial.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-galery">
-        <div class="container">
-          <div class="galery-info">
-            <h2>Conheça nossa galeria!</h2>
-            <div class="galery-content">
-              <div class="galery-itens">
-                <a href="">
-                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                  <p>Tipo de vestido 1</p>
-                </a>
-
-              </div>
-              <div class="galery-itens">
-                <a href="">
-                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                  <p>Tipo de vestido 2</p>
-                </a>
-              </div>
-              <div class="galery-itens">
-                <a href="">
-                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                  <p>Tipo de vestido 3</p>
-                </a>
-              </div>
-            </div>
-            <div class="galery-content">
-              <div class="galery-itens">
-                <a href="">
-                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                  <p>Tipo de vestido 4</p>
-                </a>
-              </div>
-              <div class="galery-itens">
-                <a href="">
-                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                  <p>Tipo de vestido 5</p>
-                </a>
-              </div>
-              <div class="galery-itens">
-                <a href="">
-                  <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                  <p>Tipo de vestido 6</p>
-                </a>
-              </div>
-            </div>
-            <a href="#">Ver todas fotos ...</a>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-depoimentos">
-        <div class="container">
-          <div class="depoimentos-info">
-            <h2>Depoimentos</h2>
-            <div class="depoimentos-content">
-              <div class="depoimentos-itens">
-                <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                <h3>Nome da pessoa</h3>
-                <p>Texto</p>
-                <div class="rating-depoimentos">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                </div>
-              </div>
-              <div class="depoimentos-itens">
-                <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                <h3>Nome da pessoa</h3>
-                <p>Texto</p>
-                <div class="rating-depoimentos">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
-              </div>
-              <div class="depoimentos-itens">
-                <img src="./resources/assets/img/vestido-branco.jpg" alt="">
-                <h3>Nome da pessoa</h3>
-                <p>Texto</p>
-                <div class="rating-depoimentos">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-faq">
-        <div class="container">
-          <div class="faq-info">
-            <h2>Perguntas frequentes</h2>
-            <div class="faq-content">
-              <div class="faq-itens">
-                <div class="faq-item">
-                  <button class="btn-collapse">
-                    1. Pergunta
-                  </button>
-                  <div class="content-collapse">
-                    <p>
-                      Resposta: 
-                    </p>
-                  </div>
-                </div>
-                <div class="faq-item">
-                  <button class="btn-collapse">
-                    1. Pergunta
-                  </button>
-                  <div class="content-collapse">
-                    <p>
-                      Resposta:
-                    </p>
-                  </div>
-                </div>
-                <div class="faq-item">
-                  <button class="btn-collapse">
-                    1. Pergunta
-                  </button>
-                  <div class="content-collapse">
-                    <p>
-                      Resposta:
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-form">
-        <div class="container">
-          <h2>Entre em contato</h2>
-          <div class="form-info">
-            <div class="endereco-loja">
-              <div class="adress-itens">
-                <img src="./resources/assets/img/logo-julia-golldenzon.webp" alt="" width="150" height="150">
-                <strong>Endereço:</strong>
-                <p><i class="fa-solid fa-location-dot"></i>R. Jerônimo Monteiro, 73 - 101 - Leblon, Rio de Janeiro - RJ</p>
-              </div>
-              <div class="adress-itens">
-                <strong>Atendimento:</strong>
-                <div>
-                  <a href=""><i class="fa-regular fa-envelope"></i> loja@ateliejuliagolldenzon.com</a> <br>
-                  <a href="tel:(21) 3489-9733"><i class="fa-solid fa-phone"></i>Telefone: (21) 3489-9733</a> <br>
-                  <a href="https://api.whatsapp.com/send?phone=5521971211140"><i class="fa-brands fa-whatsapp"></i>Whatsapp:(21) 9 7121-1140</a>
-                </div>
-              </div>
-              <div class="adress-itens">
-                <strong>Redes Sociais:</strong>
-                <div>
-                  <a href="https://www.facebook.com/ateliejuliagolldenzon/"><i class="fa-brands fa-facebook-f"></i></a>
-                  <a href="https://www.instagram.com/juliagolldenzon/"><i class="fa-brands fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-            <div class="form-content">
-              <form action="caminho.php" method="POST">
-                <label for="nome">Nome:</label> <br />
-                <input type="text" id="nome" name="nome" placeholder="Seu nome" required /> <br />
-                <label for="email">E-mail:</label> <br />
-                <input type="email" id="email" name="email" placeholder="Insira seu e-mail" required /><br />
-                <label for="mensagem">Mensagem:</label><br />
-                <textarea
-                  id="mensagem"
-                  name="mensagem"
-                  rows="5"
-                  cols="30"
-                  required
-                  placeholder="Digite sua mensagem"
-                ></textarea>
+    <section class="s-sobre">
+      <div class="container">
+        <div class="content-sobre">
+          <div class="box-sobre">
+            <div class="box-left-sobre">
+              <strong>Sobre Nós</strong>
+              <h2>O casamento perfeito</h2>
+              <p>
+                Empresa especializada na criação de vestidos de noivas únicos e
+                deslumbrantes. Nossos designs são feitos sob medida, com atenção
+                aos detalhes e qualidade excepcional. Transformamos sonhos em
+                realidade, tornando o dia do casamento ainda mais especial e
+                memorável.
+              </p>
+              <div class="box-left-check-itens">
+                <i class="fa-regular fa-circle-check"></i> <span>Item 1</span>
                 <br />
-                <input type="submit" value="Enviar" />
-              </form>
-              <h3 class="or">Ou</h3>
-              <a href="">
-                <div class="whatsForm">
-                  <p>Entre em contato</p>
-                  <i class="fa fa-whatsapp whatsapp-icon"></i>
-                </div>
-              </a>
+                <i class="fa-regular fa-circle-check"></i> <span>Item 2</span>
+                <br />
+                <i class="fa-regular fa-circle-check"></i> <span>Item 3</span>
+              </div>
+              <div class="contato-sobre-left">
+                <a href="">Entre em contato</a>
+              </div>
+            </div>
+            <div class="box-right-sobre">
+              <img src="./resources/assets/img/casamento-sobre.jpg" alt="" />
+            </div>
+          </div>
+          <div class="box-numeros-sobre">
+            <div class="itens-numeros-sobre">
+              <p class="number-sobre">568<span class="plus-sobre">+</span></p>
+              <p class="iten-sobre">Decorações</p>
+            </div>
+            <div class="itens-numeros-sobre">
+              <p class="number-sobre">568<span class="plus-sobre">+</span></p>
+              <p class="iten-sobre">Decorações</p>
+            </div>
+            <div class="itens-numeros-sobre">
+              <p class="number-sobre">568<span class="plus-sobre">+</span></p>
+              <p class="iten-sobre">Decorações</p>
+            </div>
+            <div class="itens-numeros-sobre last-itens-numeros-sobre">
+              <p class="number-sobre">568<span class="plus-sobre">+</span></p>
+              <p class="iten-sobre">Decorações</p>
+            </div>
+          </div>
+          <div class="video-sobre-apresentation">
+            <strong>Apresentação</strong>
+            <h2>Conheça mais sobre nós</h2>
+            <div class="item-video-sobre">
+              <video width="100%" height="400" controls>
+                <source src="movie.mp4" type="video/mp4" />
+                <source src="movie.ogg" type="video/ogg" />
+              </video>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="s-whatsAppButton">
-        <a href="https://wa.me/Numero do Telefone" target="_blank" class="whatsapp-link">
-          <i class="fa fa-whatsapp whatsapp-icon"></i>
-        </a>
-      </section>
-    </main>
+    <section class="s-galeria">
+      <div class="container">
+        <div class="content-galeria">
+          <strong>Galeria</strong>
+          <h2>Conheça nossa galeria de fotos</h2>
+        </div>
+      </div>
+    </section>
 
-    <script>
-      // Selecione todos os elementos de pergunta do FAQ
-      const faqQuestions = document.querySelectorAll('.faq-question');
-
-      // Adicione um ouvinte de evento de clique a cada pergunta
-      faqQuestions.forEach(question => {
-        question.addEventListener('click', () => {
-          // Selecione o elemento de resposta correspondente
-          const answer = question.parentNode.querySelector('.faq-answer');
-          // Alternar a classe "active" no elemento de pergunta atual
-          question.parentNode.classList.toggle('active');
-          // Atualizar a posição da seta
-          const arrow = question.querySelector('::before');
-          arrow.style.right = question.parentNode.classList.contains('active') ? '5px' : '15px'; // Mova a seta para a esquerda quando a resposta estiver aberta
-        });
-      });
-    </script>
-    
-    <script src="./resources/assets/js/main.js"></script>
+    <!--Carrousel-->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+    ></script>
   </body>
 </html>
