base LP design desktop

--- a/index.html
+++ b/index.html
@@ -179,14 +179,238 @@
       </div>
     </section>
 
+    <div class="divisoria-sections">
+      <img
+        src="./resources/assets/img/coracao-flor-removebg-preview.png"
+        alt=""
+      />
+    </div>
+
     <section class="s-galeria">
       <div class="container">
         <div class="content-galeria">
           <strong>Galeria</strong>
-          <h2>Conheça nossa galeria de fotos</h2>
+          <h2>Conheça nossa galeria de vestidos</h2>
+          <div class="box-galeria">
+            <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img4.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
+          </div>
+          <div class="link-galeria">
+            <a href="">Ver Todos</a>
+          </div>
         </div>
       </div>
     </section>
+
+    <div class="divisoria-sections2">
+      <img
+        src="./resources/assets/img/divisoria-coracao-removebg-preview.png"
+        alt=""
+      />
+    </div>
+
+    <section class="s-servicos">
+      <div class="container">
+        <div class="content-servicos">
+          <strong>Serviços</strong>
+          <h2>Nossos serviços</h2>
+          <div class="box-servicos">
+            <div class="left-servicos">
+              <div class="itens-servico">
+                <img src="./resources/assets/img/servico-1.png" alt="" />
+                <p>Tipo de serviço 1</p>
+              </div>
+              <div class="itens-servico">
+                <img src="./resources/assets/img/servico-2.png" alt="" />
+                <p>Tipo de serviço 2</p>
+              </div>
+              <div class="itens-servico">
+                <img src="./resources/assets/img/servico-3.png" alt="" />
+                <p>Tipo de serviço 3</p>
+              </div>
+              <div class="itens-servico">
+                <img src="./resources/assets/img/servico-4.png" alt="" />
+                <p>Tipo de serviço 4</p>
+              </div>
+            </div>
+            <div class="right-servicos">
+              <img
+                src="./resources/assets/img/dois-coracoes-removebg-preview.png"
+                alt=""
+              />
+              <h2>Os melhores vestidos estão aqui</h2>
+              <p>
+                Informação sobre os serviços prestados Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Ea! Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Est quos enim reiciendis vero
+                tenetur repellat eos. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsam ab exercitationem repudiandae, odio
+                minima enim ad amet rem officiis reiciendis?
+              </p>
+            </div>
+          </div>
+          <div class="link-servicos">
+            <a href="">Ver mais</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="divisoria-sections2">
+      <img
+        src="./resources/assets/img/divisoria-wedding-removebg-preview.png"
+        alt=""
+      />
+    </div>
+
+    <section class="s-depoimentos">
+      <div class="container">
+        <div class="content-depoimentos">
+          <strong>Depoimentos</strong>
+          <h2>Confira os depoimentos dos clientes</h2>
+          <div class="box-depoimentos">
+            <div class="item-depoimento">
+              <img src="./resources/assets/img/perfil-exemplo2.avif" alt="" />
+              <p class="name-depoimento">Talita</p>
+              <p class="text-depoimento">
+                <span>"</span> Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Dicta blanditiis incidunt consectetur quaerat
+                doloremque est, adipisci, nisi repellat harum eos optio
+                consequuntur veritatis provident quasi nostrum voluptatum
+                voluptatem odio nam?
+              </p>
+              <p class="date-depoimento">20/20/2020</p>
+            </div>
+
+            <div class="item-depoimento">
+              <img src="./resources/assets/img/perfil-exemplo2.avif" alt="" />
+              <p class="name-depoimento">Nathalia</p>
+              <p class="text-depoimento">
+                <span>"</span> Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Dicta blanditiis incidunt consectetur quaerat
+                doloremque est, adipisci, nisi repellat harum eos optio
+                consequuntur veritatis provident quasi nostrum voluptatum
+                voluptatem odio nam?
+              </p>
+              <p class="date-depoimento">20/20/2020</p>
+            </div>
+
+            <div class="item-depoimento">
+              <img src="./resources/assets/img/perfil-exemplo2.avif" alt="" />
+              <p class="name-depoimento">Luiza</p>
+              <p class="text-depoimento">
+                <span>"</span> Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Dicta blanditiis incidunt consectetur quaerat
+                doloremque est, adipisci, nisi repellat harum eos optio
+                consequuntur veritatis provident quasi nostrum voluptatum
+                voluptatem odio nam?
+              </p>
+              <p class="date-depoimento">20/20/2020</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="divisoria-sections2">
+      <img
+        src="./resources/assets/img/divisoria-coracao-removebg-preview.png"
+        alt=""
+      />
+    </div>
+
+    <section class="s-contato">
+      <div class="container">
+        <div class="content-contato">
+          <strong>Contato</strong>
+          <h2>Entre em contato</h2>
+          <div class="box-contato">
+            <div class="box-left-contato">
+              <div class="form-contato">
+                <img
+                  src="./resources/assets/img/coracao-flor-removebg-preview.png"
+                  alt=""
+                />
+                <form action="" method="post">
+                  <div class="form-row">
+                    <div class="form-column">
+                      <label for="nome">Nome:</label>
+                      <input type="text" id="nome" name="nome" required />
+                    </div>
+                    <div class="form-column">
+                      <label for="telefone">Telefone:</label>
+                      <input
+                        type="tel"
+                        id="telefone"
+                        name="telefone"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-column">
+                      <label for="email">Email:</label>
+                      <input type="email" id="email" name="email" required />
+                    </div>
+                    <div class="form-column">
+                      <label for="assunto">Assunto:</label>
+                      <input type="text" id="assunto" name="assunto" required />
+                    </div>
+                  </div>
+                  <label for="mensagem">Mensagem:</label> <br />
+                  <textarea id="mensagem" name="mensagem" required></textarea>
+                  <button type="submit">Enviar</button>
+                </form>
+              </div>
+            </div>
+            <div class="box-right-contato">
+              <img
+                src="./resources/assets/img/logo-julia-golldenzon.webp"
+                width="150"
+                alt=""
+              />
+              <h3>Conheça nosso Atelie</h3>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7346.018572662678!2d-43.228759!3d-22.986686!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd5b700c0e949%3A0xa43c5fd548c630bf!2sAteli%C3%AA%20Julia%20Golldenzon!5e0!3m2!1spt-BR!2sbr!4v1683660153472!5m2!1spt-BR!2sbr"
+                width="500"
+                height="350"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="s-insta-feed">
+      <div class="container">
+        <div class="content-insta-feed">
+          <div class="box-insta-feed"></div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="s-footer">
+      <div class="container">
+        <div class="content-footer">
+          <div class="box-left-footer">
+            <img src="" alt="" />
+            <p>Breve descrição...</p>
+            <div class="icons-social-footer">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+          </div>
+          <div class="box-right-footer"></div>
+        </div>
+      </div>
+    </footer>
 
     <!--Carrousel-->
     <script
